fix: additional fixes for openclaw-desktop - SessionOptions, FontIcon types, imports